Questions model made the question max length to 100 so not overflow out of the box quizContainer bottom margin added quiz.html title fixed position in mobile search.html quizzes fixed the width of text in mobile quiz.js fixed bottomQuestionChanger which was not hide when active autoChanger

--- a/app/static/css/base/_globals.scss
+++ b/app/static/css/base/_globals.scss
@@ -478,7 +478,7 @@ input {
             }
 
             li {
-                margin-bottom: 1.5rem; margin-left: 1.5rem;
+                margin-bottom: 4.5rem; margin-left: 1.5rem;
                 box-shadow: 0 0 10px #000000bd;
                 position: relative;
                 transition: all .2s ease-in-out;
@@ -488,6 +488,7 @@ input {
                 @include breakpoints-down(medium) {
                     height: 9.6rem;
                     margin: .5rem auto;
+                    margin-bottom: 5.5rem;
                 }
 
                 &:hover {
