--- a/app/static/css/templates/_quizzes.scss
+++ b/app/static/css/templates/_quizzes.scss
@@ -34,7 +34,11 @@ body {
             margin-bottom: .5rem;
             padding-right: 1.5rem;
             padding-left: 1.5rem;
-            transform: translate(-1.5rem);
+            transform: translate(-2rem);
+
+            @include breakpoints-down(medium) {
+                transform: translate(0)
+            }
         }
 
         h5 {
